<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/signUpTxt"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtLName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTxtFName"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:ems="10"
        android:hint="@string/firstNameHint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/eTxtLName"
        app:layout_constraintEnd_toStartOf="@+id/eTxtLName"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@+id/eTxtLName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/lastNameHint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eTxtFName"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <EditText
        android:id="@+id/eTxtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtLName"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <EditText
        android:id="@+id/eTxtPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtEmail"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <EditText
        android:id="@+id/eTxtAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/apartmentHint"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtPostal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtPhone"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <EditText
        android:id="@+id/eTextCity"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:hint="@string/cityHint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/eTxtPostal"
        app:layout_constraintEnd_toStartOf="@+id/eTxtPostal"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <EditText
        android:id="@+id/etxtProvince"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/provinceHint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/radBtnCondns"
        app:layout_constraintEnd_toStartOf="@+id/eTxtCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtPostal"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <EditText
        android:id="@+id/eTxtPostal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/postalHint"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etxtProvince"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eTextCity"
        app:layout_constraintTop_toBottomOf="@+id/eTxtAddress"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <EditText
        android:id="@+id/eTxtCountry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/countryHint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/etxtProvince"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etxtProvince"
        app:layout_constraintTop_toTopOf="@+id/etxtProvince"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <RadioButton
        android:id="@+id/radBtnCondns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="8dp"
        android:text="@string/termsCondTxt"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtProvince"
        android:importantForAutofill="no" tools:targetApi="o"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/registerTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radBtnCondns"
        android:importantForAutofill="no" tools:targetApi="o"
        />
</android.support.constraint.ConstraintLayout>