<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppHomeActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="429dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/applogo"
        android:contentDescription="@string/imageDescTxt"
        app:layout_constraintBottom_toTopOf="@+id/txtJoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:text="@string/signUpTxt"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogIn"
        app:layout_constraintEnd_toStartOf="@+id/btnLogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLogIn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="42dp"
        android:text="@string/signInTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/txtAlready" />

    <TextView
        android:id="@+id/txtJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="7dp"
        android:text="@string/joinTxt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAlready"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/alreadyTxt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintStart_toStartOf="@+id/txtJoin"
        app:layout_constraintTop_toBottomOf="@+id/txtJoin" />
</android.support.constraint.ConstraintLayout>