<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orderDetailsActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/act8Title"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/txt"
        app:layout_constraintStart_toStartOf="@+id/txt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="28dp"
        android:text="@string/txtItemsAdded"
        app:layout_constraintBottom_toTopOf="@+id/txtGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/txtGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/cbxInvitation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt">

        <RadioButton
            android:id="@+id/radDelivery"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radDelivery"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radPickup"
            android:layout_width="314dp"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:text="@string/radPickup"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnProceed"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cbxInvitation"
        app:layout_constraintTop_toBottomOf="@+id/cbxInvitation" />

    <CheckBox
        android:id="@+id/cbxInvitation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="35dp"
        android:text="@string/cbxInvitation"
        app:layout_constraintBottom_toTopOf="@+id/btnProceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup" />
</android.support.constraint.ConstraintLayout>