<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nearbyStoreActivity">

    <TextView
        android:id="@+id/titleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:text="@string/searchTxt"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtPostalFind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTxtPostalFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/postalHint"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnFind"
        app:layout_constraintStart_toStartOf="@+id/titleSearch"
        app:layout_constraintTop_toBottomOf="@+id/titleSearch"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/btnFind"
        android:layout_width="121dp"
        android:layout_height="0dp"
        android:layout_marginBottom="308dp"
        android:text="@string/findTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtPostalFind" />
</android.support.constraint.ConstraintLayout>