<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signInActivity">

    <TextView
        android:id="@+id/titleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="47dp"
        android:gravity="center"
        android:text="@string/signInTxt"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtSignInEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTxtSignInEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textAutoComplete|textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/eTxtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSignIn"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/eTxtPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtSignInEmail"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="131dp"
        android:layout_height="53dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginBottom="173dp"
        android:text="@string/signInTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/eTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/eTxtPassword" />
</android.support.constraint.ConstraintLayout>